--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="text-div">
             <h1>Lasers </h1>
-            <h2>This website is for the dads who feel overwhelmed, but want to get it together. The dads who want to improve, but need the resources. I'm not perfect, I'm just a dad who wants to help other dads. </h2>
+            <h2>Lasers have revolutionized plastics fabrication, providing precise cutting, engraving, and marking. They eliminate waste, save time, and offer versatility for intricate designs. With controlled heat, lasers ensure clean edges and enhance efficiency in manufacturing.</h2>
         </div>
     </div>
 
