--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1686063225/Untitled_design_8_vm160t.png" alt=""/>
         </div>
         <div class="text-div">
-            <h1> Diamond Polisher & Flame Polishing Division  </h1>
+            <h1> Diamond Polisher & Flame Polishing   </h1>
             <h2>The Calsak Plastics Fabrication Team can produce flawless edge finishes with our polishing capabilities. Creating a clear optical edge on acrylic requires special skill that we are proud to possess in Charlotte. Acrylic is known for its clarity and light transmittance, but due to its fragile makeup, achieving optical clarity depends on the operator’s skill. At Calsak Plastics, we have mastered polishing techniques to ensure our customers’ expectations are exceeded.</h2>
         </div>
     </div>
