--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="content-card">
                 <h3>Specialty/Recreational Vehicle Markets</h3>
                 <img id="image" style="margin-right: auto; margin-left: auto;" width="80%" src="https://res.cloudinary.com/inside-plastics/image/upload/v1689340176/Calsak/Specialty_Vehicle_ppmdle.jpg" alt=""/>
-                <p>Description text here.</p>
+                <p>RV, Train and Bus Windshields</p>
              
             </div>
 
