--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="text-div">
             <h1>Featured Applications</h1>
-            <h2>Calsak Plastics serves a wide range of industries etc. This could be a photo collage like pictured to the left, or it could be a carousel of these featured applications. Architectural signage, boat windshields, any other applications Gaston wants to share.</h2>
+            <h2>Calsak Plastics serves a wide range of industries and applications. We have the equipment and expertise necessary to see your projecets through from ideation to delivery.</h2>
         </div>
     </div>
 
