--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <div class="section gray-bg about-div">
         <div class="image-div">
-            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1686063225/Untitled_design_8_vm160t.png" alt=""/>
+            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1689361195/Calsak/MicrosoftTeams-image_14_oj6mcp.jpg" alt=""/>
         </div>
         <div class="text-div">
             <h1> Ovens/Forming Equipment  </h1>
