--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo-div">
 
-            <img style="margin-right: 1rem;" height=25  src="https://res.cloudinary.com/inside-plastics/image/upload/v1688726672/Calsak/Calsak_Fabrication_Logo_stacked_aka7h3.jpg" alt="">  <h2>Charlotte</h2>
+            <img style="margin-right: 1rem;" height=50  src="https://res.cloudinary.com/inside-plastics/image/upload/v1688726672/Calsak/Calsak_Fabrication_Logo_stacked_aka7h3.jpg" alt="">  <h2>Charlotte</h2>
 
 
         </div>
@@ -44,7 +44,7 @@
 
     <div class="section gray-bg about-div">
         <div class="image-div">
-            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1688999812/Calsak/Calsak%20Charlotte/MicrosoftTeams-image_9_monrrm.jpg" alt=""/>
+            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1690565217/Calsak/calsak_1_z6rm9k.png" alt=""/>
         </div>
         <div class="text-div">
             <h1>Featured Applications</h1>
@@ -74,7 +74,7 @@
 
     <div class="section gray-bg about-div">
         <div class="image-div">
-            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1688729737/Calsak/MicrosoftTeams-image_4_brzugt.jpg" alt=""/>
+            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1690302526/Calsak/Laser_Cutter_rrcpqv.jpg" alt=""/>
         </div>
         <div class="text-div">
             <h1>Lasers </h1>
@@ -84,7 +84,7 @@
 
     <div class="section gray-bg about-div">
         <div class="image-div">
-            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1688729737/Calsak/MicrosoftTeams-image_7_mxnuxb.jpg" alt=""/>
+            <img id="image" width="400" src="https://res.cloudinary.com/inside-plastics/image/upload/v1690564897/Calsak/AdobeStock_497747933_mo0dmb.jpg" alt=""/>
         </div>
         <div class="text-div">
             <h1>Die Cutters </h1>
