--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="text-div">
             <h1>Featured Applications</h1>
-            <h2>Calsak Plastics serves a wide range of industries and applications. We have the equipment and expertise necessary to see your projecets through from ideation to delivery.</h2>
+            <h2>Calsak Plastics serves a wide range of industries and applications. We have the equipment and expertise necessary to see your projects through from ideation to delivery.</h2>
         </div>
     </div>
 
